# JobPipe

./: .env  .env.example  .gitignore  Guideline.md  HiringCafe - AI Job Search.html  Job_Description.md  Master_CV.md  README.md  SRS.md  main.tex  pyproject.toml  requirements-dev.txt  requirements.txt  test_company_extract.js  test_indeed_extract.js  verify_extension_fix.js  verify_fix.js
HiringCafe - AI Job Search_files/: 05e98c5096d04aab.js.download  075e288dc8987a1a.js.download  0a449b74195260e2.js.download  0ae032e0e817fd5a.js.download  10eb89bcdbf20a28.js.download  13ace3ff7dd8e8fa.js.download  174c743cb7ba7f58.js.download  1f36a79162add335.js.download  21a51cfb86dfd058.js.download  22febf4c8fa9acf2.js.download  2f55d91e370ae8b3.js.download  2f77fee171db906c.js.download  300bcf9d5ea9a03e.js.download  3047d97834906ff6.js.download  32485d01bbdd14d5.js.download  32acda50dc661461.js.download  3b7f09022ff8d115.js.download  3ba4bfb9913a7134.js.download  4b6c7b4123056601.js.download  4bd008e186429d44.js.download  544c302bd3eef12f.js.download  55a56a9cc26ec1e2.js.download  56f8f30ba8c141de.css  59f9ae65294923e9.js.download  5ab408e2fa2c71a9.js.download  6271f69c2d7dbc86.js.download  63abd6e6afbd7b11.js.download  647f934ea5c67f5f.js.download  65d18d401531b2d6.css  6e1e09b1660d2d2c.js.download  6ff906c7643661ed.js.download  70afa038011fc2ee.js.download  7279d31593003129.js.download  748ab78e6ad28b33.js.download  7d5c66603b4b6271.js.download  865dcbc7b8c70efc.js.download  87bc8eaca37ec986.js.download  8b359b6ec53e696e.js.download  8d570cfaa9c3b215.js.download  98b1fa3de920af0a.js.download  (+57 more)
data/: jobpipe.db  jobpipe.db-shm  jobpipe.db-wal
extension/: LOADING_INSTRUCTIONS.md  README.md  create_icons.html  generate_icons.ps1  manifest.json  setup.ps1  test_page.html
scripts/: download_embedding_model.py
tests/: test_attainability.py  test_auth_state.py  test_builtin_parser.py  test_calculator.py  test_cli.py  test_config.py  test_cv_parser.py  (+24 more)
(+119 files in other folders)
